--- a/config.toml.example
+++ b/config.toml.example
@@ -1,6 +1,6 @@
 # Example config file for vivi.
 
-# Server listen port
+# Server config
 [server]
-address = "0.0.0.0" 
+address = "127.0.0.1" 
 port    = 8080
