Implement file watcher

--- a/config.toml.example
+++ b/config.toml.example
@@ -2,5 +2,13 @@
 
 # Server config
 [server]
+# Server listening address, 
+# Set it to "0.0.0.0" to export server to public network
 address = "127.0.0.1" 
 port    = 8080
+
+# Storage config
+[storage]
+
+# A string list of local directory to watch, such as: "./storage"
+watchPath = []
